--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.0.6",
+    "@react-native-community/netinfo": "^6.0.0",
+    "aws-amplify": "^3.3.26",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "netinfo": "^0.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
